--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@
 
 /* VERSION INFO */
 .info-3pQQBb:last-child::after {
-  content: "Fallout Terminal Version 1.3.15";
+  content: "EricoTheme version 1.3.15";
   font-size: 12px;
   line-height: 16px;
   color: var(--highlight);
